# web

./: .dockerignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/assets/css/: components.css  config.css  home.css  index.css  server.css  universal.css  variables.css
src/assets/js/: config.js  dashboard.js  home.js  index.js  self.js  server.js  utils.js
src/migrations/: 25_06_2025.sql  27_06_2025.sql  29_06_2025.sql  30_06_2025.sql  30_06_2025_02.sql
src/templates/: config.html  dashboard.html  home.html  index.html  self.html  server.html
src/webvpn/: __init__.py  app.py  utils.py
src/webvpn/entities/: application.py  configs.py  dependency.py  request.py  sessions.py  user.py  vpn_servers.py
src/webvpn/repositories/auth_session/: get_session_strategy.py  session_mapper.py  sessions.py
src/webvpn/repositories/configs/: config_mapper.py  configs.py  get_configs_strategy.py
src/webvpn/repositories/postgres/: database.py
src/webvpn/repositories/users/: get_users_strategy.py  user.py  users_mapper.py
src/webvpn/repositories/vpn_servers/: mapper.py  repo.py  servers.py  strategy.py
src/webvpn/settings/: base.py
src/webvpn/web/: __init__.py
src/webvpn/web/api_handlers/: auth.py  checkcode.py  configs.py  health.py  users.py  vpn_servers.py
src/webvpn/web/ui_handlers/: index.py  ui.py
tests/: conftest.py  test_health.py
